--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -10,6 +10,9 @@
       .invalid-icon
 
   script.mapp-header(type="text/template")
+    | <% if (g.banner) { %>
+    img.banner src="<% print(g.banner); %>"
+    | <% } else { %>
     table
       | <% if (_maybe.slogan) { %>
       tr
@@ -28,6 +31,7 @@
         | <% } %>
         td.name {{ name }}
       | <% } %>
+    | <% } %>
 
   script.tab-bar(type="text/template")
     table
