--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -13,6 +13,7 @@ window.g = {
   company: '<%=escape_javascript @company.name %>',
   slogan: "<%=escape_javascript @company.settings.slogan %>",
   logo: "<%=escape_javascript @company.logo.url(:mobile) %>",
+  banner: "<%=escape_javascript @company.banner.url(:mobile) %>",
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
   isTablet: /<%= tablet_devices %>/i.test( navigator.userAgent.toLowerCase() ),
