--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -434,6 +434,7 @@ div.wysiwyg ul.toolbar {
 
 #builder .edit-area.customize {
   .subpanels > * { display: none }
+  img.banner.default { border: 1px dashed; }
 }
 
 
