--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -170,6 +170,10 @@ p {
     font-style: italic;
     line-height: 1em;
   }
+  img.banner {
+    width: 100%;
+    max-width: 100%;
+  }
 }
 
 .tab-bar {
