Fixed real time color preview.

--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -30,7 +30,7 @@
   <% end %>
 
   <% if @company.settings.tab_bar_text_color %>
-  border-color: <%= @company.settings.tab_bar_text_color %> !important;
+  border-color: <%= @company.settings.tab_bar_text_color %>;
   <% end %>
 }
 
