--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -14,6 +14,7 @@ window.g = {
   slogan: "<%=escape_javascript @company.settings.slogan %>",
   logo: "<%=escape_javascript @company.logo.url(:mobile) %>",
   banner: "<%=escape_javascript @company.banner.url(:mobile) %>",
+  body_bg: "<%=escape_javascript @company.settings.body_bg.url(:mobile) %>",
   id_counter: <%=@company.id_counter %>,
   userEmails: {
     yomobi: "<%=escape_javascript @company.user.email %>",
@@ -28,7 +29,7 @@ window.g = {
   openEditSettings: <%= @open_edit_settings || false %>,
 
   wphotoUploadPath: "<%= wphoto_upload_path %>",
-  bannerUploadPath: "<%= banner_upload_path %>",
+  customizeUploadPath: "<%= customize_upload_path %>",
 
 <%- if @is_builder %>
   <% arr = [] %>
