Added close button to site upgrade panel.

--- a/app/views/site_manager/upgrade.slim
+++ b/app/views/site_manager/upgrade.slim
@@ -6,3 +6,5 @@ erb:
   <script type="text/javascript">
     WePay.iframe_checkout("checkout", "<%=raw (@checkout.checkout_uri || @checkout.preapproval_uri) %>");
   </script>
+
+button.close-btn Close
