--- a/app/views/site_manager/upgrade.slim
+++ b/app/views/site_manager/upgrade.slim
@@ -7,4 +7,4 @@ erb:
     WePay.iframe_checkout("checkout", "<%=raw (@checkout.checkout_uri || @checkout.preapproval_uri) %>");
   </script>
 
-button.close-btn Close
+button.back-btn Back
