Only apply customize background image to mobile home page.

--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -50,7 +50,7 @@
   <% end %>
 }
 
-#canvas .page {
+#canvas #home.page {
   <% if @company.settings.body_bg.url(:mobile) != '' %>
   background-image: url(<%= @company.settings.body_bg.url(:mobile) %>);
   background-repeat: <%= @company.settings.body_bg_repeat %>;
