--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -55,6 +55,10 @@
   background-image: url(<%= @company.settings.body_bg.url(:mobile) %>);
   background-repeat: <%= @company.settings.body_bg_repeat %>;
   <% end %>
+
+  <% if @company.settings.body_bg_color %>
+  background-color: <%= @company.settings.body_bg_color %>;
+  <% end %>
 }
 
 </style>
