--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -435,6 +435,7 @@ div.wysiwyg ul.toolbar {
 #builder .edit-area.customize {
   .subpanels > * { display: none }
   img.banner.default { border: 1px dashed; }
+  .not-premium { width: 250px; float: left; }
 }
 
 
