--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -248,6 +248,9 @@ p.success {
     background: #4f6aa3;
     border-color: #4f6aa3; }
 
+.main-btn.disabled {
+  opacity: 0.5; }
+
 .alt-btn {
   background: #eeeeee;
   border: 1px solid;
