--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -418,6 +418,9 @@ div.wysiwyg ul.toolbar {
   display: none; }
 #builder .edit-area.customize img.banner.default {
   border: 1px dashed; }
+#builder .edit-area.customize .not-premium {
+  width: 250px;
+  float: left; }
 
 .widget-editor .edit-area label {
   white-space: normal; }
