--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -276,6 +276,10 @@ p.success {
     background: #4f6aa3;
     border-color: #4f6aa3; } }
 
+.main-btn.disabled {
+  opacity: 0.5;
+}
+
 .alt-btn {
   background: #eeeeee;
   border: 1px solid;
