Restrict image upload customization to premium sites.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -320,18 +320,23 @@ script.customize(type="text/template")
                   =t'builder.customize.banner'
                   a href="http://help.yomobi.com/Mobile/ChangeSiteBanner" target="ymhelp"
                     img.help-bubble src="/images/ui/help-bubble.png" title=t('builder.customize.banner_help')
-                | <% if (banner_src) { %>
+                | <% if (banner_src && isPremium) { %>
                 img.banner src="{{ banner_src }}"
                 | <% } %>
+            | <% if (isPremium) { %>
             tr
               td
                 .selected-file.lfloat &nbsp;
                 button name="pick_files" =t'dialog.add_new.browse'
                 .error
-              | <% if (banner_src) { %>
+              | <%   if (banner_src) { %>
               td
                 a.remove-banner-link href="#" =t'dialog.add_new.remove_picture'
-              | <% } %>
+              | <%   } %>
+            | <% } else { %>
+            tr
+              td = t'builder.customize.not_premium'
+            | <% } %>
         h3 Customizing Header
         label Backgound Color
         .color-picker data-color="{{ header_color }}" data-target="header_color"
@@ -388,16 +393,17 @@ script.customize(type="text/template")
                 | <% if (body_bg_src) { %>
                 img.banner src="{{ body_bg_src }}"
                 | <% } %>
+            | <% if (isPremium) { %>
             tr
               td
                 .selected-file.lfloat &nbsp;
                 button name="pick_files" =t'dialog.add_new.browse'
                 .error
-              | <% if (body_bg_src) { %>
+              | <%    if (body_bg_src) { %>
               td
                 a.remove-body_bg-link href="#" =t'dialog.add_new.remove_picture'
-              | <% } %>
-            | <% if (body_bg_src) { %>
+              | <%    } %>
+            | <%    if (body_bg_src) { %>
             tr
               td colspan="2"
                 select name="body_bg_repeat"
@@ -405,6 +411,10 @@ script.customize(type="text/template")
                   option value="repeat-x" Repeat Horizontally
                   option value="repeat-y" Repeat Vertically
                   option value="repeat" Repeat Both
+            | <%    } %>
+            | <% } else { %>
+            tr
+              td = t'builder.customize.not_premium'
             | <% } %>
 
 
