--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -48,6 +48,7 @@ window.g = {
 <%- end %>
 
   noPhotoPath: '/images/no-wphoto.png',
+  blankImg: '/images/blank.png',
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
   isTablet: /<%= tablet_devices %>/i.test( navigator.userAgent.toLowerCase() )
