--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,27 @@ body {
 	color:#000000;
 }
 
+.pretty-button {
+	background: #0290ee;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	color: white;
+	display: block;
+	float: left;
+	font-size: 16px;
+	line-height: 22px;
+	font-weight: normal;
+	padding: 6px 10px;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+	cursor: pointer;
+}
+
 .passwordlink {
 	color:#f0f0f2;
 	text-decoration:none;
