Replaced max-width with width to work in IE7 in signup.css

--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -29,7 +29,7 @@
       padding: 0px;
     }
     input[type=text], input[type=password] {
-      max-width: 175px;
+      width: 175px;
       padding: 2px;
       margin: 0px;
       border-color: #8A9CC2;}
