--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -23,7 +23,7 @@
     #header.signed-out form label {
       padding: 0px; }
     #header.signed-out form input[type=text], #header.signed-out form input[type=password] {
-      max-width: 175px;
+      width: 175px;
       padding: 2px;
       margin: 0px;
       border-color: #8A9CC2; }
