Updated label for no-longer-required address 1 field in find-us widget

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -482,7 +482,7 @@ script.business-hours-edit-area(type="text/template")
   .clearfix
 
 script.find-us-edit-area(type="text/template")
-  label =t'builder.widget_editor.address1_label_required'
+  label =t'builder.widget_editor.address1_label'
   input name="addr1" type="text" value="{{ _maybe.addr1 }}"
   br
   label =t'builder.widget_editor.address2_label'
