--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -411,7 +411,9 @@ label.help { padding-bottom: 4px; }
   float: right; }
 
 .clearfix {
-  clear: both; }
+  clear: both;
+  margin: 0; padding: 0; height: 0;
+ }
 
 .lclear {
   clear: left; }
