--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -497,6 +497,7 @@ div.wysiwyg ul.toolbar {
     margin: 0 0 0 48px;
     padding: 1px 0 0 0;
   }
+  .divider { margin-top: 38px; }
 }
 
 #builder .edit-area.hours {
