Added overflow hidden to sidebar .widgets

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -89,7 +89,8 @@ div.wysiwyg ul.toolbar {
 
 #sidebar .widgets {
   padding-left: 2px;
-  overflow: auto; }
+  overflow-x: hidden;
+  overflow-y: hidden; }
 
 #content {
   float: left;
